--- a/index.html
+++ b/index.html
@@ -425,41 +425,41 @@
                 <span class="section__subtitle">Recent work</span>
                 <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
-                            <div>
-                     <!-- PORTFOLIO 1 -->
-                                <div class="portfolio__content grid swiper-slide">
+                        <div>
+                 <!-- PORTFOLIO 1 -->
+                             <div class="portfolio__content grid swiper-slide">
                                     <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
-                                    <div class="portfolio_data">
-                                        <h3 class="portfolio_title">
+                                    <div class="portfolio__data">
+                                        <h3 class="portfolio__title">
                                             ELAR, An Edu-AR App
                                         </h3>
                                         <p class="portfolio__description">
                                             <b>“ELAR”</b> is An Augmented Reality based software which can be used by students with their traditional textbooks. This software will help students to visualize the 3D representation of the entity they are learning about.
                                         </p>
-                                        <a href="https://github.com/anikurhade/ELAR" class="button button-flex button-small portfolio_button" target="_blank">
+                                        <a href="https://github.com/anikurhade/ELAR" class="button button--flex button--small portfolio__button" target="_blank">
                                             Repo Link &nbsp;
                                             <i class="fa-brands fa-github"></i></i>
                                         </a>
                                     </div>
                                 </div>  
-                            </div>
+                            
                     </div>
                 </div>
                     <!-- Project 2 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/grofmartprojimage.png" alt="" class="portfolio__img">
-                        <div class="portfolio_data">
-                            <h3 class="portfolio_title">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">
                                 Grof-Mart
                             </h3>
                                 <p class="portfolio__description">
                                     <b>“Grof-Mart”</b> is a trial to supply the benefits of on-line looking to customers of a true look.This Is A Online Grocery Store With Full Payment Gateway Build In Pure Javascript And HTML.
                                 </p>
-                                <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button-flex button-small portfolio_button" target="_blank">
+                                <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button--flex button--small portfolio__button" target="_blank">
                                     Repo Link &nbsp;
                                     <i class="fa-brands fa-github"></i></i>
                                 </a>&nbsp;
-                                <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button-flex button-small portfolio_button" target="_blank">
+                                <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button--flex button--small portfolio__button" target="_blank">
                                 Check Out &nbsp;
                                 <i class="fa-solid fa-display"></i>
                                 </a>
@@ -468,18 +468,18 @@
                     <!-- Project 3 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/grofmartprojimage.png" alt="" class="portfolio__img">
-                        <div class="portfolio_data">
-                            <h3 class="portfolio_title">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">
                                 Grof-Mart
                             </h3>
                                 <p class="portfolio__description">
                                     <b>“Grof-Mart”</b> is a trial to supply the benefits of on-line looking to customers of a true look.This Is A Online Grocery Store With Full Payment Gateway Build In Pure Javascript And HTML.
                                 </p>
-                                <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button-flex button-small portfolio_button" target="_blank">
+                                <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button--flex button--small portfolio__button" target="_blank">
                                     Repo Link &nbsp;
                                     <i class="fa-brands fa-github"></i></i>
                                 </a>&nbsp;
-                                <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button-flex button-small portfolio_button" target="_blank">
+                                <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button--flex button--small portfolio__button" target="_blank">
                                 Check Out &nbsp;
                                 <i class="fa-solid fa-display"></i>
                                 </a>
@@ -495,24 +495,92 @@
                          <!-- Pagination -->
                         <div class="swiper-pagination"></div>
                     </div>
+                </div>
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
             <section class="project section">
-
+                    <div class="project__bg">
+                        <div class="project__container container grid">
+                            <div class="project__data">
+                                <h2 class="project__title">new project</h2>
+                                <p class="project__description">description</p>
+                                <a href="#contact" class="button button--flex button--white">
+                                    contact me 
+                                    <i class="uil uil-message project__icon button__icon"></i>
+                                </a>
+                            </div>
+                            <img src="assets/img/project.png" alt="" class="project__img">
+                        </div>
+                    </div>
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
             <section class="testimonial section">
-                
+                <h2 class="section__title">TESTIMONIAL</h2>
+                <span class="section__subtitle">My client saying</span>
+                <div class="testimonial__container container swiper-container">
+                    <div class="swiper-wrapper">
+                        <!--==================== TESTIMONIAL 1 ====================-->
+                        <div class="testimonial__content swiper-slide">
+                            <div class="testimonial__data">
+                                <div class="testimonial__header">
+                                    <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                                    <div>
+                                        <h3 class="testimonial__name">sara smith</h3>
+                                        <span class="testimonial__client">client</span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                </div>
+                            </div>
+
+                            <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Ad necessitatibus numquam eum, odio fuga voluptatem laudantium. 
+                                Eligendi maiores, consequuntur quos nam, assumenda veritatis molestias amet odio quas animi ducimus quaerat.
+                            </p>
+                        </div>
+                        <!--==================== TESTIMONIAL 2 ====================-->
+                        <div class="testimonial__content swiper-slide">
+                            <div class="testimonial__data">
+                                <div class="testimonial__header">
+                                    <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                                    <div>
+                                        <h3 class="testimonial__name">sara smith</h3>
+                                        <span class="testimonial__client">client</span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                    <i class="uil uil-star testimonal__icon-star"></i>
+                                </div>
+                            </div>
+
+                            <p class="testimonial__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Ad necessitatibus numquam eum, odio fuga voluptatem laudantium. 
+                                Eligendi maiores, consequuntur quos nam, assumenda veritatis molestias amet odio quas animi ducimus quaerat.
+                            </p>
+                        </div>
+                    </div>
+                    <!--Add pagination-->
+                    <div class="swiper-pagination swiper-pagination-testimonial"></div>
+                </div>
             </section>
 
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
             <h1 class="section_title">Contact Me</h1>
             <span class="section_subtitle">
-        Wish to connect? My inbox is always open!
-      </span>
+                 Wish to connect? My inbox is always open!
+            </span>
             <div class="contact_container container grid">
                 <div>
                     <a href="mailto:shreyasvarade0201@gmail.com" target="_blank">
@@ -567,7 +635,7 @@
 
             </div>
         </section>
-    </main>
+     </main>
 
         <!--==================== FOOTER ====================-->
         <footer class="footer">
